// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Select> (Downshift) should allow removal of components by passing a void function 1`] = `
<DocumentFragment>
  <div
    class="SelectStyle__Container-sc-qr1jv6-0 dAiIIm"
    data-testid="container"
  >
    <div
      class="SelectStyle__Combobox-sc-qr1jv6-2 ezfKYw"
      data-active="false"
      data-disabled="false"
      data-invalid="false"
      data-testid="combobox"
    >
      <input
        aria-activedescendant=""
        aria-autocomplete="list"
        aria-controls="downshift-:re:-menu"
        aria-expanded="false"
        aria-invalid="false"
        aria-labelledby="downshift-:re:-label"
        autocomplete="off"
        class="SelectStyle__Input-sc-qr1jv6-3 gYieQU"
        data-testid="input"
        id="downshift-:re:-input"
        role="combobox"
        value=""
      />
      <div
        class="SelectStyle__IndicatorsContainer-sc-qr1jv6-4 gRkXme"
        data-testid="indicators-container"
      />
    </div>
    <ul
      aria-labelledby="downshift-:re:-label"
      class="SelectStyle__Menu-sc-qr1jv6-9 jBEHBX hidden"
      data-testid="menu"
      id="downshift-:re:-menu"
      role="listbox"
    >
      <li
        class="SelectStyle__EmptyList-sc-qr1jv6-11 iiorbY"
        data-testid="empty-list"
      >
        No results found. Try another keyword to search for.
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`<Select> (Downshift) should group items by groupKey if given 1`] = `
<DocumentFragment>
  <div
    class="SelectStyle__Container-sc-qr1jv6-0 dAiIIm"
    data-testid="container"
  >
    <div
      class="SelectStyle__Combobox-sc-qr1jv6-2 ezfKYw"
      data-active="false"
      data-disabled="false"
      data-invalid="false"
      data-testid="combobox"
    >
      <input
        aria-activedescendant=""
        aria-autocomplete="list"
        aria-controls="downshift-:r13:-menu"
        aria-expanded="false"
        aria-invalid="false"
        aria-labelledby="downshift-:r13:-label"
        autocomplete="off"
        class="SelectStyle__Input-sc-qr1jv6-3 gYieQU"
        data-testid="input"
        id="downshift-:r13:-input"
        role="combobox"
        value=""
      />
      <div
        class="SelectStyle__IndicatorsContainer-sc-qr1jv6-4 gRkXme"
        data-testid="indicators-container"
      >
        <button
          aria-controls="downshift-:r13:-menu"
          aria-expanded="false"
          aria-label="toggle menu"
          class="SelectStyle___IndicatorButton-sc-qr1jv6-5 SelectStyle__ToggleButton-sc-qr1jv6-7 fmXfrc"
          data-testid="toggle-button"
          id="downshift-:r13:-toggle-button"
          tabindex="-1"
          type="button"
        >
          <svg
            class="IconStyle__VerticalCenteredSvg-sc-x7d280-0 cqBxxO"
            data-testid="icon-svg"
            fill="currentColor"
            height="1em"
            viewBox="0 0 100 100"
            width="1em"
          >
            <polygon
              points="11.7984725 19 49.9935275 57.3950291 88.1885825 19 99.987055 30.7984725 49.9935275 80.792 0 30.7984725"
            />
          </svg>
        </button>
      </div>
    </div>
    <ul
      aria-labelledby="downshift-:r13:-label"
      class="SelectStyle__Menu-sc-qr1jv6-9 jBEHBX hidden"
      data-testid="menu"
      id="downshift-:r13:-menu"
      role="listbox"
    >
      <li
        class="SelectStyle__EmptyList-sc-qr1jv6-11 iiorbY"
        data-testid="empty-list"
      >
        No results found. Try another keyword to search for.
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`<Select> (Downshift) should have a loading indicator 1`] = `
<DocumentFragment>
  <div
    class="SelectStyle__Container-sc-qr1jv6-0 dAiIIm"
    data-testid="container"
  >
    <div
      class="SelectStyle__Combobox-sc-qr1jv6-2 ezfKYw"
      data-active="false"
      data-disabled="false"
      data-invalid="false"
      data-testid="combobox"
    >
      <input
        aria-activedescendant=""
        aria-autocomplete="list"
        aria-controls="downshift-:rf:-menu"
        aria-expanded="false"
        aria-invalid="false"
        aria-labelledby="downshift-:rf:-label"
        autocomplete="off"
        class="SelectStyle__Input-sc-qr1jv6-3 gYieQU"
        data-testid="input"
        id="downshift-:rf:-input"
        role="combobox"
        value=""
      />
      <div
        class="SelectStyle__IndicatorsContainer-sc-qr1jv6-4 gRkXme"
        data-testid="indicators-container"
      >
        <div
          aria-busy="true"
          aria-live="polite"
          class="LoadingStyle__LoadingContainer-sc-fg2qx3-0 dTLHiG aries-loading SelectStyle__LoadingIndicator-sc-qr1jv6-8 drAcxv"
          data-testid="loading-indicator"
          role="alert"
        >
          <div
            class="LoadingStyle__Spinner-sc-fg2qx3-1 jHIaBd"
          />
        </div>
        <button
          aria-controls="downshift-:rf:-menu"
          aria-expanded="false"
          aria-label="toggle menu"
          class="SelectStyle___IndicatorButton-sc-qr1jv6-5 SelectStyle__ToggleButton-sc-qr1jv6-7 fmXfrc"
          data-testid="toggle-button"
          id="downshift-:rf:-toggle-button"
          tabindex="-1"
          type="button"
        >
          <svg
            class="IconStyle__VerticalCenteredSvg-sc-x7d280-0 cqBxxO"
            data-testid="icon-svg"
            fill="currentColor"
            height="1em"
            viewBox="0 0 100 100"
            width="1em"
          >
            <polygon
              points="11.7984725 19 49.9935275 57.3950291 88.1885825 19 99.987055 30.7984725 49.9935275 80.792 0 30.7984725"
            />
          </svg>
        </button>
      </div>
    </div>
    <ul
      aria-labelledby="downshift-:rf:-label"
      class="SelectStyle__Menu-sc-qr1jv6-9 jBEHBX hidden"
      data-testid="menu"
      id="downshift-:rf:-menu"
      role="listbox"
    >
      <li
        class="SelectStyle__EmptyList-sc-qr1jv6-11 iiorbY"
        data-testid="empty-list"
      >
        No results found. Try another keyword to search for.
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`<Select> (Downshift) should have an invalid state 1`] = `
<DocumentFragment>
  <div
    class="SelectStyle__Container-sc-qr1jv6-0 dAiIIm"
    data-testid="container"
  >
    <label
      class="SelectStyle__Label-sc-qr1jv6-1 bLLpmn"
      data-active="false"
      data-disabled="false"
      data-invalid="true"
      data-testid="label"
      for="downshift-:ru:-input"
      id="downshift-:ru:-label"
    >
      Foo
    </label>
    <div
      class="SelectStyle__Combobox-sc-qr1jv6-2 ezfKYw"
      data-active="false"
      data-disabled="false"
      data-invalid="true"
      data-testid="combobox"
    >
      <input
        aria-activedescendant=""
        aria-autocomplete="list"
        aria-controls="downshift-:ru:-menu"
        aria-describedby="description-31"
        aria-expanded="false"
        aria-invalid="true"
        aria-labelledby="downshift-:ru:-label"
        autocomplete="off"
        class="SelectStyle__Input-sc-qr1jv6-3 gYieQU"
        data-testid="input"
        id="downshift-:ru:-input"
        role="combobox"
        value=""
      />
      <div
        class="SelectStyle__IndicatorsContainer-sc-qr1jv6-4 gRkXme"
        data-testid="indicators-container"
      >
        <button
          aria-controls="downshift-:ru:-menu"
          aria-expanded="false"
          aria-label="toggle menu"
          class="SelectStyle___IndicatorButton-sc-qr1jv6-5 SelectStyle__ToggleButton-sc-qr1jv6-7 fmXfrc"
          data-testid="toggle-button"
          id="downshift-:ru:-toggle-button"
          tabindex="-1"
          type="button"
        >
          <svg
            class="IconStyle__VerticalCenteredSvg-sc-x7d280-0 cqBxxO"
            data-testid="icon-svg"
            fill="currentColor"
            height="1em"
            viewBox="0 0 100 100"
            width="1em"
          >
            <polygon
              points="11.7984725 19 49.9935275 57.3950291 88.1885825 19 99.987055 30.7984725 49.9935275 80.792 0 30.7984725"
            />
          </svg>
        </button>
      </div>
    </div>
    <ul
      aria-labelledby="downshift-:ru:-label"
      class="SelectStyle__Menu-sc-qr1jv6-9 jBEHBX hidden"
      data-testid="menu"
      id="downshift-:ru:-menu"
      role="listbox"
    >
      <li
        class="SelectStyle__EmptyList-sc-qr1jv6-11 iiorbY"
        data-testid="empty-list"
      >
        No results found. Try another keyword to search for.
      </li>
    </ul>
    <span
      class="SelectStyle__HelperText-sc-qr1jv6-12 dKkhlB"
      data-invalid="true"
      data-testid="helper-text"
      id="description-31"
    >
      Invalid
    </span>
  </div>
</DocumentFragment>
`;

exports[`<Select> (Downshift) should have an optional helper-text 1`] = `
<DocumentFragment>
  <div
    class="SelectStyle__Container-sc-qr1jv6-0 dAiIIm"
    data-testid="container"
  >
    <div
      class="SelectStyle__Combobox-sc-qr1jv6-2 ezfKYw"
      data-active="false"
      data-disabled="false"
      data-invalid="false"
      data-testid="combobox"
    >
      <input
        aria-activedescendant=""
        aria-autocomplete="list"
        aria-controls="downshift-:rj:-menu"
        aria-describedby="description-20"
        aria-expanded="false"
        aria-invalid="false"
        aria-labelledby="downshift-:rj:-label"
        autocomplete="off"
        class="SelectStyle__Input-sc-qr1jv6-3 gYieQU"
        data-testid="input"
        id="downshift-:rj:-input"
        role="combobox"
        value=""
      />
      <div
        class="SelectStyle__IndicatorsContainer-sc-qr1jv6-4 gRkXme"
        data-testid="indicators-container"
      >
        <button
          aria-controls="downshift-:rj:-menu"
          aria-expanded="false"
          aria-label="toggle menu"
          class="SelectStyle___IndicatorButton-sc-qr1jv6-5 SelectStyle__ToggleButton-sc-qr1jv6-7 fmXfrc"
          data-testid="toggle-button"
          id="downshift-:rj:-toggle-button"
          tabindex="-1"
          type="button"
        >
          <svg
            class="IconStyle__VerticalCenteredSvg-sc-x7d280-0 cqBxxO"
            data-testid="icon-svg"
            fill="currentColor"
            height="1em"
            viewBox="0 0 100 100"
            width="1em"
          >
            <polygon
              points="11.7984725 19 49.9935275 57.3950291 88.1885825 19 99.987055 30.7984725 49.9935275 80.792 0 30.7984725"
            />
          </svg>
        </button>
      </div>
    </div>
    <ul
      aria-labelledby="downshift-:rj:-label"
      class="SelectStyle__Menu-sc-qr1jv6-9 jBEHBX hidden"
      data-testid="menu"
      id="downshift-:rj:-menu"
      role="listbox"
    >
      <li
        class="SelectStyle__EmptyList-sc-qr1jv6-11 iiorbY"
        data-testid="empty-list"
      >
        No results found. Try another keyword to search for.
      </li>
    </ul>
    <span
      class="SelectStyle__HelperText-sc-qr1jv6-12 dKkhlB"
      data-invalid="false"
      data-testid="helper-text"
      id="description-20"
    >
      foo
    </span>
  </div>
</DocumentFragment>
`;

exports[`<Select> (Downshift) should have an optional label 1`] = `
<DocumentFragment>
  <div
    class="SelectStyle__Container-sc-qr1jv6-0 dAiIIm"
    data-testid="container"
  >
    <label
      class="SelectStyle__Label-sc-qr1jv6-1 bLLpmn"
      data-active="false"
      data-disabled="false"
      data-invalid="false"
      data-testid="label"
      for="downshift-:rl:-input"
      id="downshift-:rl:-label"
    >
      foo
    </label>
    <div
      class="SelectStyle__Combobox-sc-qr1jv6-2 ezfKYw"
      data-active="false"
      data-disabled="false"
      data-invalid="false"
      data-testid="combobox"
    >
      <input
        aria-activedescendant=""
        aria-autocomplete="list"
        aria-controls="downshift-:rl:-menu"
        aria-expanded="false"
        aria-invalid="false"
        aria-labelledby="downshift-:rl:-label"
        autocomplete="off"
        class="SelectStyle__Input-sc-qr1jv6-3 gYieQU"
        data-testid="input"
        id="downshift-:rl:-input"
        role="combobox"
        value=""
      />
      <div
        class="SelectStyle__IndicatorsContainer-sc-qr1jv6-4 gRkXme"
        data-testid="indicators-container"
      >
        <button
          aria-controls="downshift-:rl:-menu"
          aria-expanded="false"
          aria-label="toggle menu"
          class="SelectStyle___IndicatorButton-sc-qr1jv6-5 SelectStyle__ToggleButton-sc-qr1jv6-7 fmXfrc"
          data-testid="toggle-button"
          id="downshift-:rl:-toggle-button"
          tabindex="-1"
          type="button"
        >
          <svg
            class="IconStyle__VerticalCenteredSvg-sc-x7d280-0 cqBxxO"
            data-testid="icon-svg"
            fill="currentColor"
            height="1em"
            viewBox="0 0 100 100"
            width="1em"
          >
            <polygon
              points="11.7984725 19 49.9935275 57.3950291 88.1885825 19 99.987055 30.7984725 49.9935275 80.792 0 30.7984725"
            />
          </svg>
        </button>
      </div>
    </div>
    <ul
      aria-labelledby="downshift-:rl:-label"
      class="SelectStyle__Menu-sc-qr1jv6-9 jBEHBX hidden"
      data-testid="menu"
      id="downshift-:rl:-menu"
      role="listbox"
    >
      <li
        class="SelectStyle__EmptyList-sc-qr1jv6-11 iiorbY"
        data-testid="empty-list"
      >
        No results found. Try another keyword to search for.
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`<Select> (Downshift) should have an optional placeholder 1`] = `
<DocumentFragment>
  <div
    class="SelectStyle__Container-sc-qr1jv6-0 dAiIIm"
    data-testid="container"
  >
    <div
      class="SelectStyle__Combobox-sc-qr1jv6-2 ezfKYw"
      data-active="false"
      data-disabled="false"
      data-invalid="false"
      data-testid="combobox"
    >
      <input
        aria-activedescendant=""
        aria-autocomplete="list"
        aria-controls="downshift-:rk:-menu"
        aria-expanded="false"
        aria-invalid="false"
        aria-labelledby="downshift-:rk:-label"
        autocomplete="off"
        class="SelectStyle__Input-sc-qr1jv6-3 gYieQU"
        data-testid="input"
        id="downshift-:rk:-input"
        placeholder="foo"
        role="combobox"
        value=""
      />
      <div
        class="SelectStyle__IndicatorsContainer-sc-qr1jv6-4 gRkXme"
        data-testid="indicators-container"
      >
        <button
          aria-controls="downshift-:rk:-menu"
          aria-expanded="false"
          aria-label="toggle menu"
          class="SelectStyle___IndicatorButton-sc-qr1jv6-5 SelectStyle__ToggleButton-sc-qr1jv6-7 fmXfrc"
          data-testid="toggle-button"
          id="downshift-:rk:-toggle-button"
          tabindex="-1"
          type="button"
        >
          <svg
            class="IconStyle__VerticalCenteredSvg-sc-x7d280-0 cqBxxO"
            data-testid="icon-svg"
            fill="currentColor"
            height="1em"
            viewBox="0 0 100 100"
            width="1em"
          >
            <polygon
              points="11.7984725 19 49.9935275 57.3950291 88.1885825 19 99.987055 30.7984725 49.9935275 80.792 0 30.7984725"
            />
          </svg>
        </button>
      </div>
    </div>
    <ul
      aria-labelledby="downshift-:rk:-label"
      class="SelectStyle__Menu-sc-qr1jv6-9 jBEHBX hidden"
      data-testid="menu"
      id="downshift-:rk:-menu"
      role="listbox"
    >
      <li
        class="SelectStyle__EmptyList-sc-qr1jv6-11 iiorbY"
        data-testid="empty-list"
      >
        No results found. Try another keyword to search for.
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`<Select> (Downshift) should match snapshot when closed 1`] = `
<DocumentFragment>
  <div
    class="SelectStyle__Container-sc-qr1jv6-0 dAiIIm"
    data-testid="container"
  >
    <div
      class="SelectStyle__Combobox-sc-qr1jv6-2 ezfKYw"
      data-active="false"
      data-disabled="false"
      data-invalid="false"
      data-testid="combobox"
    >
      <input
        aria-activedescendant=""
        aria-autocomplete="list"
        aria-controls="downshift-:r1:-menu"
        aria-expanded="false"
        aria-invalid="false"
        aria-labelledby="downshift-:r1:-label"
        autocomplete="off"
        class="SelectStyle__Input-sc-qr1jv6-3 gYieQU"
        data-testid="input"
        id="downshift-:r1:-input"
        role="combobox"
        value=""
      />
      <div
        class="SelectStyle__IndicatorsContainer-sc-qr1jv6-4 gRkXme"
        data-testid="indicators-container"
      >
        <button
          aria-controls="downshift-:r1:-menu"
          aria-expanded="false"
          aria-label="toggle menu"
          class="SelectStyle___IndicatorButton-sc-qr1jv6-5 SelectStyle__ToggleButton-sc-qr1jv6-7 fmXfrc"
          data-testid="toggle-button"
          id="downshift-:r1:-toggle-button"
          tabindex="-1"
          type="button"
        >
          <svg
            class="IconStyle__VerticalCenteredSvg-sc-x7d280-0 cqBxxO"
            data-testid="icon-svg"
            fill="currentColor"
            height="1em"
            viewBox="0 0 100 100"
            width="1em"
          >
            <polygon
              points="11.7984725 19 49.9935275 57.3950291 88.1885825 19 99.987055 30.7984725 49.9935275 80.792 0 30.7984725"
            />
          </svg>
        </button>
      </div>
    </div>
    <ul
      aria-labelledby="downshift-:r1:-label"
      class="SelectStyle__Menu-sc-qr1jv6-9 jBEHBX hidden"
      data-testid="menu"
      id="downshift-:r1:-menu"
      role="listbox"
    >
      <li
        class="SelectStyle__EmptyList-sc-qr1jv6-11 iiorbY"
        data-testid="empty-list"
      >
        No results found. Try another keyword to search for.
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`<Select> (Downshift) should match snapshot when open 1`] = `
<DocumentFragment>
  <div
    class="SelectStyle__Container-sc-qr1jv6-0 dAiIIm"
    data-testid="container"
  >
    <div
      class="SelectStyle__Combobox-sc-qr1jv6-2 ezfKYw"
      data-active="true"
      data-disabled="false"
      data-invalid="false"
      data-testid="combobox"
    >
      <input
        aria-activedescendant=""
        aria-autocomplete="list"
        aria-controls="downshift-:r2:-menu"
        aria-expanded="true"
        aria-invalid="false"
        aria-labelledby="downshift-:r2:-label"
        autocomplete="off"
        class="SelectStyle__Input-sc-qr1jv6-3 gYieQU"
        data-testid="input"
        id="downshift-:r2:-input"
        role="combobox"
        value=""
      />
      <div
        class="SelectStyle__IndicatorsContainer-sc-qr1jv6-4 gRkXme"
        data-testid="indicators-container"
      >
        <button
          aria-controls="downshift-:r2:-menu"
          aria-expanded="true"
          aria-label="toggle menu"
          class="SelectStyle___IndicatorButton-sc-qr1jv6-5 SelectStyle__ToggleButton-sc-qr1jv6-7 fmXfrc"
          data-testid="toggle-button"
          id="downshift-:r2:-toggle-button"
          tabindex="-1"
          type="button"
        >
          <svg
            class="IconStyle__VerticalCenteredSvg-sc-x7d280-0 cqBxxO"
            data-testid="icon-svg"
            fill="currentColor"
            height="1em"
            viewBox="0 0 100 100"
            width="1em"
          >
            <polygon
              points="11.8 80.8 0 69 50 19 100 69 88.2 80.8 50 42.4"
            />
          </svg>
        </button>
      </div>
    </div>
    <ul
      aria-labelledby="downshift-:r2:-label"
      class="SelectStyle__Menu-sc-qr1jv6-9 jBEHBX"
      data-testid="menu"
      id="downshift-:r2:-menu"
      role="listbox"
    >
      <li
        aria-selected="false"
        class="SelectStyle__Item-sc-qr1jv6-10 eggQdq"
        id="downshift-:r2:-item-0"
        role="option"
        title="Software Engineer0"
      >
        Software Engineer
      </li>
      <li
        aria-selected="false"
        class="SelectStyle__Item-sc-qr1jv6-10 eggQdq"
        id="downshift-:r2:-item-1"
        role="option"
        title="Software Tester1"
      >
        Software Tester
      </li>
      <li
        aria-selected="false"
        class="SelectStyle__Item-sc-qr1jv6-10 eggQdq"
        id="downshift-:r2:-item-2"
        role="option"
        title="Back-end Engineer2"
      >
        Back-end Engineer
      </li>
      <li
        aria-selected="false"
        class="SelectStyle__Item-sc-qr1jv6-10 eggQdq"
        id="downshift-:r2:-item-3"
        role="option"
        title="Front-end Engineer3"
      >
        Front-end Engineer
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`<Select> (Downshift) should use custom subcomponents when provided 1`] = `
<DocumentFragment>
  <div
    class="SelectStyle__Container-sc-qr1jv6-0 dAiIIm"
    data-testid="container"
  >
    <label
      class="SelectStyle__Label-sc-qr1jv6-1 bLLpmn"
      data-active="true"
      data-disabled="false"
      data-invalid="false"
      data-test="bar"
      data-testid="label"
      for="downshift-:rd:-input"
      id="downshift-:rd:-label"
    >
      i am label
    </label>
    <div
      class="SelectStyle__Combobox-sc-qr1jv6-2 ezfKYw"
      data-active="true"
      data-disabled="false"
      data-invalid="false"
      data-testid="combobox"
    >
      <input
        aria-activedescendant=""
        aria-autocomplete="list"
        aria-controls="downshift-:rd:-menu"
        aria-expanded="true"
        aria-invalid="false"
        aria-labelledby="downshift-:rd:-label"
        autocomplete="off"
        class="SelectStyle__Input-sc-qr1jv6-3 gYieQU"
        data-testid="input"
        id="downshift-:rd:-input"
        role="combobox"
        value=""
      />
      <div
        class="SelectStyle__IndicatorsContainer-sc-qr1jv6-4 gRkXme"
        data-testid="indicators-container"
      >
        <button
          aria-controls="downshift-:rd:-menu"
          aria-expanded="true"
          aria-label="toggle menu"
          class="SelectStyle___IndicatorButton-sc-qr1jv6-5 SelectStyle__ToggleButton-sc-qr1jv6-7 fmXfrc"
          data-testid="toggle-button"
          id="downshift-:rd:-toggle-button"
          tabindex="-1"
          type="button"
        >
          <svg
            class="IconStyle__VerticalCenteredSvg-sc-x7d280-0 cqBxxO"
            data-testid="icon-svg"
            fill="currentColor"
            height="1em"
            viewBox="0 0 100 100"
            width="1em"
          >
            <polygon
              points="11.8 80.8 0 69 50 19 100 69 88.2 80.8 50 42.4"
            />
          </svg>
        </button>
      </div>
    </div>
    <ul
      aria-labelledby="downshift-:rd:-label"
      class="SelectStyle__Menu-sc-qr1jv6-9 jBEHBX"
      data-testid="menu"
      id="downshift-:rd:-menu"
      role="listbox"
    >
      <li
        aria-selected="false"
        class="SelectStyle__Item-sc-qr1jv6-10 eggQdq"
        data-test="foo"
        id="downshift-:rd:-item-0"
        role="option"
        title="Software Engineer0"
      >
        Software Engineer
      </li>
      <li
        aria-selected="false"
        class="SelectStyle__Item-sc-qr1jv6-10 eggQdq"
        data-test="foo"
        id="downshift-:rd:-item-1"
        role="option"
        title="Software Tester1"
      >
        Software Tester
      </li>
      <li
        aria-selected="false"
        class="SelectStyle__Item-sc-qr1jv6-10 eggQdq"
        data-test="foo"
        id="downshift-:rd:-item-2"
        role="option"
        title="Back-end Engineer2"
      >
        Back-end Engineer
      </li>
      <li
        aria-selected="false"
        class="SelectStyle__Item-sc-qr1jv6-10 eggQdq"
        data-test="foo"
        id="downshift-:rd:-item-3"
        role="option"
        title="Front-end Engineer3"
      >
        Front-end Engineer
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`<Select> (Downshift) when disableTyping is true should not accept text input 1`] = `
<DocumentFragment>
  <div
    class="SelectStyle__Container-sc-qr1jv6-0 dAiIIm"
    data-testid="container"
  >
    <div
      class="SelectStyle__Combobox-sc-qr1jv6-2 ezfKYw"
      data-active="false"
      data-disabled="false"
      data-invalid="false"
      data-testid="combobox"
    >
      <input
        aria-activedescendant=""
        aria-autocomplete="list"
        aria-controls="downshift-:rn:-menu"
        aria-expanded="false"
        aria-invalid="false"
        aria-labelledby="downshift-:rn:-label"
        autocomplete="off"
        class="SelectStyle__Input-sc-qr1jv6-3 gYieQU"
        data-testid="input"
        id="downshift-:rn:-input"
        readonly=""
        role="combobox"
        value=""
      />
      <div
        class="SelectStyle__IndicatorsContainer-sc-qr1jv6-4 gRkXme"
        data-testid="indicators-container"
      >
        <button
          aria-controls="downshift-:rn:-menu"
          aria-expanded="false"
          aria-label="toggle menu"
          class="SelectStyle___IndicatorButton-sc-qr1jv6-5 SelectStyle__ToggleButton-sc-qr1jv6-7 fmXfrc"
          data-testid="toggle-button"
          id="downshift-:rn:-toggle-button"
          tabindex="-1"
          type="button"
        >
          <svg
            class="IconStyle__VerticalCenteredSvg-sc-x7d280-0 cqBxxO"
            data-testid="icon-svg"
            fill="currentColor"
            height="1em"
            viewBox="0 0 100 100"
            width="1em"
          >
            <polygon
              points="11.7984725 19 49.9935275 57.3950291 88.1885825 19 99.987055 30.7984725 49.9935275 80.792 0 30.7984725"
            />
          </svg>
        </button>
      </div>
    </div>
    <ul
      aria-labelledby="downshift-:rn:-label"
      class="SelectStyle__Menu-sc-qr1jv6-9 jBEHBX hidden"
      data-testid="menu"
      id="downshift-:rn:-menu"
      role="listbox"
    >
      <li
        class="SelectStyle__EmptyList-sc-qr1jv6-11 iiorbY"
        data-testid="empty-list"
      >
        No results found. Try another keyword to search for.
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`<Select> (Downshift) when isOpenInitially=true should be open on render 1`] = `
<DocumentFragment>
  <div
    class="SelectStyle__Container-sc-qr1jv6-0 dAiIIm"
    data-testid="container"
  >
    <div
      class="SelectStyle__Combobox-sc-qr1jv6-2 ezfKYw"
      data-active="true"
      data-disabled="false"
      data-invalid="false"
      data-testid="combobox"
    >
      <input
        aria-activedescendant=""
        aria-autocomplete="list"
        aria-controls="downshift-:rg:-menu"
        aria-expanded="true"
        aria-invalid="false"
        aria-labelledby="downshift-:rg:-label"
        autocomplete="off"
        class="SelectStyle__Input-sc-qr1jv6-3 gYieQU"
        data-testid="input"
        id="downshift-:rg:-input"
        role="combobox"
        value=""
      />
      <div
        class="SelectStyle__IndicatorsContainer-sc-qr1jv6-4 gRkXme"
        data-testid="indicators-container"
      >
        <button
          aria-controls="downshift-:rg:-menu"
          aria-expanded="true"
          aria-label="toggle menu"
          class="SelectStyle___IndicatorButton-sc-qr1jv6-5 SelectStyle__ToggleButton-sc-qr1jv6-7 fmXfrc"
          data-testid="toggle-button"
          id="downshift-:rg:-toggle-button"
          tabindex="-1"
          type="button"
        >
          <svg
            class="IconStyle__VerticalCenteredSvg-sc-x7d280-0 cqBxxO"
            data-testid="icon-svg"
            fill="currentColor"
            height="1em"
            viewBox="0 0 100 100"
            width="1em"
          >
            <polygon
              points="11.8 80.8 0 69 50 19 100 69 88.2 80.8 50 42.4"
            />
          </svg>
        </button>
      </div>
    </div>
    <ul
      aria-labelledby="downshift-:rg:-label"
      class="SelectStyle__Menu-sc-qr1jv6-9 jBEHBX"
      data-testid="menu"
      id="downshift-:rg:-menu"
      role="listbox"
    >
      <li
        aria-selected="false"
        class="SelectStyle__Item-sc-qr1jv6-10 eggQdq"
        id="downshift-:rg:-item-0"
        role="option"
        title="Software Engineer0"
      >
        Software Engineer
      </li>
      <li
        aria-selected="false"
        class="SelectStyle__Item-sc-qr1jv6-10 eggQdq"
        id="downshift-:rg:-item-1"
        role="option"
        title="Software Tester1"
      >
        Software Tester
      </li>
      <li
        aria-selected="false"
        class="SelectStyle__Item-sc-qr1jv6-10 eggQdq"
        id="downshift-:rg:-item-2"
        role="option"
        title="Back-end Engineer2"
      >
        Back-end Engineer
      </li>
      <li
        aria-selected="false"
        class="SelectStyle__Item-sc-qr1jv6-10 eggQdq"
        id="downshift-:rg:-item-3"
        role="option"
        title="Front-end Engineer3"
      >
        Front-end Engineer
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`<Select> (Downshift) when it is disabled should have disabled styles and attributes 1`] = `
<DocumentFragment>
  <div
    class="SelectStyle__Container-sc-qr1jv6-0 dAiIIm"
    data-testid="container"
  >
    <div
      class="SelectStyle__Combobox-sc-qr1jv6-2 ezfKYw"
      data-active="false"
      data-disabled="true"
      data-invalid="false"
      data-testid="combobox"
    >
      <input
        aria-activedescendant=""
        aria-autocomplete="list"
        aria-controls="downshift-:rm:-menu"
        aria-expanded="false"
        aria-invalid="false"
        aria-labelledby="downshift-:rm:-label"
        autocomplete="off"
        class="SelectStyle__Input-sc-qr1jv6-3 gYieQU"
        data-testid="input"
        disabled=""
        id="downshift-:rm:-input"
        role="combobox"
        value=""
      />
      <div
        class="SelectStyle__IndicatorsContainer-sc-qr1jv6-4 gRkXme"
        data-testid="indicators-container"
      >
        <button
          aria-controls="downshift-:rm:-menu"
          aria-expanded="false"
          aria-label="toggle menu"
          class="SelectStyle___IndicatorButton-sc-qr1jv6-5 SelectStyle__ToggleButton-sc-qr1jv6-7 fmXfrc"
          data-testid="toggle-button"
          disabled=""
          id="downshift-:rm:-toggle-button"
          tabindex="-1"
          type="button"
        >
          <svg
            class="IconStyle__VerticalCenteredSvg-sc-x7d280-0 cqBxxO"
            data-testid="icon-svg"
            fill="currentColor"
            height="1em"
            viewBox="0 0 100 100"
            width="1em"
          >
            <polygon
              points="11.7984725 19 49.9935275 57.3950291 88.1885825 19 99.987055 30.7984725 49.9935275 80.792 0 30.7984725"
            />
          </svg>
        </button>
      </div>
    </div>
    <ul
      aria-labelledby="downshift-:rm:-label"
      class="SelectStyle__Menu-sc-qr1jv6-9 jBEHBX hidden"
      data-testid="menu"
      id="downshift-:rm:-menu"
      role="listbox"
    >
      <li
        class="SelectStyle__EmptyList-sc-qr1jv6-11 iiorbY"
        data-testid="empty-list"
      >
        No results found. Try another keyword to search for.
      </li>
    </ul>
  </div>
</DocumentFragment>
`;
